--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 										<li><a href="#">Veroeros feugiat</a></li>
 									</ul>
 								</li>
-								<li><a href="left-sidebar.html">Left Sidebar</a></li>
-								<li><a href="right-sidebar.html">Right Sidebar</a></li>
-								<li><a href="no-sidebar.html">No Sidebar</a></li>
+								<!-- <li><a href="left-sidebar.html">Left Sidebar</a></li> -->
+								<!-- <li><a href="right-sidebar.html">Right Sidebar</a></li> -->
+								<!-- <li><a href="no-sidebar.html">No Sidebar</a></li> -->
 							</ul>
 						</nav>
 
